<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemail"
                    android:id="@+id/textViewUsername"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextUsername"
                    android:layout_gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lpassword"
                    android:id="@+id/textViewPassword"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:password="false"
                    android:padding="20dp"
                    android:textSize="20dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextPassword"
                    android:autoText="false"
                    android:layout_gravity="center"/>
            <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnlogin"
                    android:id="@+id/buttonLogin"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="30dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewResults"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:textSize="15dp"
                    android:textColor="#f00"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>